template.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: infrastructure for n-isucon-2019
Parameters:
  CidrIpOffice:
    Type: String
    Default: '{{resolve:ssm:/ISHOCON2/Dev/Network/office-ip:1}}'
  VpcIdMain:
    Type: String
    Default: '{{resolve:ssm:/ISHOCON2/Dev/Network/vpc-id:1}}'
  SubnetIdMain:
    Type: String
    Default: '{{resolve:ssm:/ISHOCON2/Dev/Network/subnet-id:1}}'
  KeyNameMain:
    Type: String
    Default: '{{resolve:ssm:/ISHOCON2/Dev/Security/key-name:1}}'
Resources:
  Ec2SecurityGroupProvision:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${AWS::StackName}_provision
      GroupDescription: provision server security group
      VpcId: !Ref VpcIdMain
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref CidrIpOffice
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}_provision
  Ec2SecurityGroupBenchmarker:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${AWS::StackName}_bench
      GroupDescription: benchmark server security group
      VpcId: !Ref VpcIdMain
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref Ec2SecurityGroupProvision
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}_bench
  Ec2SecurityGroupApp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${AWS::StackName}_app
      GroupDescription: app server security group
      VpcId: !Ref VpcIdMain
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref Ec2SecurityGroupProvision
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref CidrIpOffice
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref Ec2SecurityGroupBenchmarker
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}_app
  Ec2InstanceProvision:
    Type: AWS::EC2::Instance
    Properties:
      SubnetId: !Ref SubnetIdMain
      ImageId: ami-0df99b3a8349462c6
      InstanceType: t2.micro
      KeyName: !Ref KeyNameMain
      SecurityGroupIds:
        - !Ref Ec2SecurityGroupProvision
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}_provision
  EC2EIPProvision:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  EC2EIPAssociationProvision:
    Type: AWS::EC2::EIPAssociation
    Properties:
      EIP: !Ref EC2EIPProvision
      InstanceId: !Ref Ec2InstanceProvision
  Ec2InstanceBenchmarker:
    Type: AWS::EC2::Instance
    Properties:
      SubnetId: !Ref SubnetIdMain
      ImageId: ami-0df99b3a8349462c6
      InstanceType: t2.micro
      KeyName: !Ref KeyNameMain
      SecurityGroupIds:
        - !Ref Ec2SecurityGroupBenchmarker
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}_bench
  Ec2InstanceApp:
    Type: AWS::EC2::Instance
    Properties:
      SubnetId: !Ref SubnetIdMain
      ImageId: ami-0df99b3a8349462c6
      InstanceType: t2.micro
      KeyName: !Ref KeyNameMain
      SecurityGroupIds:
        - !Ref Ec2SecurityGroupApp
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}_app
  EC2EIPApp:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  EC2EIPAssociationApp:
    Type: AWS::EC2::EIPAssociation
    Properties:
      EIP: !Ref EC2EIPApp
      InstanceId: !Ref Ec2InstanceApp
# Outputs:
